src/test/deca/syntax/valid/notprovided/if_else.deca
{
if ( 1<2 ) {
   println("hello");
} else {
  println("bye");
}
}