src/test/deca/syntax/invalid/test_synt28.deca
//Resultat:
//      Erreur syntaxique : ligne 3
{
if (1){
   println();
if
}
}